update artifactory path

--- a/src/main/resources/META-INF/gradle-plugins/cpe.rpm.download-source.properties
+++ b/src/main/resources/META-INF/gradle-plugins/cpe.rpm.download-source.properties
@@ -1,1 +1,1 @@
-implementation-class=com.tgt.cpe.rpm.plugin.DownloadSourcePlugin
+implementation-class=com.devops.cpe.rpm.plugin.DownloadSourcePlugin
